Fix a few issues in CPPC extension
This fixes a few issues in the CPPC extension.

1) There is no need for optional/mandatory for CPPC registers since
_CPC object should provide enough details whether to use SBI or
not.

2) Used XLEN instead of RV32/RV64.

3) Added a space after "Read CPPC register high bits"

Signed-off-by: Sunil V L <sunilvl@ventanamicro.com>

--- a/riscv-sbi.adoc
+++ b/riscv-sbi.adoc
@@ -2037,34 +2037,34 @@ but is additionally required by the supervisor-mode power-management software.
 
 [#table_cppc_registers]
 .CPPC Registers
-[cols="2,2,1,1,1,3", width=100%, align="center", options="header"]
+[cols="1,2,1,1,3", width=100%, align="center", options="header"]
 |===
-| Register ID | Register                              | Bit Width | Mandatory / Optional | Attribute    | Description
-| 0x00000000  | HighestPerformance                    | 32        | Mandatory            | Read-only    | ACPI Spec 6.5: 8.4.6.1.1.1
-| 0x00000001  | NominalPerformance                    | 32        | Mandatory            | Read-only    | ACPI Spec 6.5: 8.4.6.1.1.2
-| 0x00000002  | LowestNonlinearPerformance            | 32        | Mandatory            | Read-only    | ACPI Spec 6.5: 8.4.6.1.1.4
-| 0x00000003  | LowestPerformance                     | 32        | Mandatory            | Read-only    | ACPI Spec 6.5: 8.4.6.1.1.5
-| 0x00000004  | GuaranteedPerformanceRegister         | 32        | Optional             | Read-only    | ACPI Spec 6.5: 8.4.6.1.1.6
-| 0x00000005  | DesiredPerformanceRegister            | 32        | Optional             | Read / Write | ACPI Spec 6.5: 8.4.6.1.2.3
-| 0x00000006  | MinimumPerformanceRegister            | 32        | Optional             | Read / Write | ACPI Spec 6.5: 8.4.6.1.2.2
-| 0x00000007  | MaximumPerformanceRegister            | 32        | Optional             | Read / Write | ACPI Spec 6.5: 8.4.6.1.2.1
-| 0x00000008  | PerformanceReductionToleranceRegister | 32        | Optional             | Read / Write | ACPI Spec 6.5: 8.4.6.1.2.4
-| 0x00000009  | TimeWindowRegister                    | 32        | Optional             | Read / Write | ACPI Spec 6.5: 8.4.6.1.2.5
-| 0x0000000A  | CounterWraparoundTime                 | 32 / 64   | Optional             | Read-only    | ACPI Spec 6.5: 8.4.6.1.3.1
-| 0x0000000B  | ReferencePerformanceCounterRegister   | 32 / 64   | Mandatory            | Read-only    | ACPI Spec 6.5: 8.4.6.1.3.1
-| 0x0000000C  | DeliveredPerformanceCounterRegister   | 32 / 64   | Mandatory            | Read-only    | ACPI Spec 6.5: 8.4.6.1.3.1
-| 0x0000000D  | PerformanceLimitedRegister            | 32        | Mandatory            | Read / Write | ACPI Spec 6.5: 8.4.6.1.3.2
-| 0x0000000E  | CPPCEnableRegister                    | 32        | Optional             | Read / Write | ACPI Spec 6.5: 8.4.6.1.4
-| 0x0000000F  | AutonomousSelectionEnable             | 32        | Optional             | Read / Write | ACPI Spec 6.5: 8.4.6.1.5
-| 0x00000010  | AutonomousActivityWindowRegister      | 32        | Optional             | Read / Write | ACPI Spec 6.5: 8.4.6.1.6
-| 0x00000011  | EnergyPerformancePreferenceRegister   | 32        | Optional             | Read / Write | ACPI Spec 6.5: 8.4.6.1.7
-| 0x00000012  | ReferencePerformance                  | 32        | Mandatory            | Read-only    | ACPI Spec 6.5: 8.4.6.1.1.3
-| 0x00000013  | LowestFrequency                       | 32        | Mandatory            | Read-only    | ACPI Spec 6.5: 8.4.6.1.1.7
-| 0x00000014  | NominalFrequency                      | 32        | Mandatory            | Read-only    | ACPI Spec 6.5: 8.4.6.1.1.7
-| 0x00000015 - 0x7FFFFFFF |                           |           |                      |              | Reserved for future use.
-| 0x80000000  | TransitionLatency                     | 32        | Mandatory            | Read-only    | Provides the maximum (worst-case) performance
-                                                                                                          state transition latency in nanoseconds.
-| 0x80000001 - 0xFFFFFFFF |                           |           |                      |              | Reserved for future use.
+| Register ID | Register                              | Bit Width | Attribute    | Description
+| 0x00000000  | HighestPerformance                    | 32        | Read-only    | ACPI Spec 6.5: 8.4.6.1.1.1
+| 0x00000001  | NominalPerformance                    | 32        | Read-only    | ACPI Spec 6.5: 8.4.6.1.1.2
+| 0x00000002  | LowestNonlinearPerformance            | 32        | Read-only    | ACPI Spec 6.5: 8.4.6.1.1.4
+| 0x00000003  | LowestPerformance                     | 32        | Read-only    | ACPI Spec 6.5: 8.4.6.1.1.5
+| 0x00000004  | GuaranteedPerformanceRegister         | 32        | Read-only    | ACPI Spec 6.5: 8.4.6.1.1.6
+| 0x00000005  | DesiredPerformanceRegister            | 32        | Read / Write | ACPI Spec 6.5: 8.4.6.1.2.3
+| 0x00000006  | MinimumPerformanceRegister            | 32        | Read / Write | ACPI Spec 6.5: 8.4.6.1.2.2
+| 0x00000007  | MaximumPerformanceRegister            | 32        | Read / Write | ACPI Spec 6.5: 8.4.6.1.2.1
+| 0x00000008  | PerformanceReductionToleranceRegister | 32        | Read / Write | ACPI Spec 6.5: 8.4.6.1.2.4
+| 0x00000009  | TimeWindowRegister                    | 32        | Read / Write | ACPI Spec 6.5: 8.4.6.1.2.5
+| 0x0000000A  | CounterWraparoundTime                 | 32 / 64   | Read-only    | ACPI Spec 6.5: 8.4.6.1.3.1
+| 0x0000000B  | ReferencePerformanceCounterRegister   | 32 / 64   | Read-only    | ACPI Spec 6.5: 8.4.6.1.3.1
+| 0x0000000C  | DeliveredPerformanceCounterRegister   | 32 / 64   | Read-only    | ACPI Spec 6.5: 8.4.6.1.3.1
+| 0x0000000D  | PerformanceLimitedRegister            | 32        | Read / Write | ACPI Spec 6.5: 8.4.6.1.3.2
+| 0x0000000E  | CPPCEnableRegister                    | 32        | Read / Write | ACPI Spec 6.5: 8.4.6.1.4
+| 0x0000000F  | AutonomousSelectionEnable             | 32        | Read / Write | ACPI Spec 6.5: 8.4.6.1.5
+| 0x00000010  | AutonomousActivityWindowRegister      | 32        | Read / Write | ACPI Spec 6.5: 8.4.6.1.6
+| 0x00000011  | EnergyPerformancePreferenceRegister   | 32        | Read / Write | ACPI Spec 6.5: 8.4.6.1.7
+| 0x00000012  | ReferencePerformance                  | 32        | Read-only    | ACPI Spec 6.5: 8.4.6.1.1.3
+| 0x00000013  | LowestFrequency                       | 32        | Read-only    | ACPI Spec 6.5: 8.4.6.1.1.7
+| 0x00000014  | NominalFrequency                      | 32        | Read-only    | ACPI Spec 6.5: 8.4.6.1.1.7
+| 0x00000015 - 0x7FFFFFFF |                           |           |              | Reserved for future use.
+| 0x80000000  | TransitionLatency                     | 32        | Read-only    | Provides the maximum (worst-case) performance
+                                                                                   state transition latency in nanoseconds.
+| 0x80000001 - 0xFFFFFFFF |                           |           |              | Reserved for future use.
 |===
 
 === Function: Probe CPPC register (FID #0)
@@ -2100,8 +2100,8 @@ The possible error codes returned in `sbiret.error` are shown in
 struct sbiret sbi_cppc_read(uint32_t cppc_reg_id)
 ----
 Reads the register as specified in the `cppc_reg_id` parameter and returns the
-value in `sbiret.value`. On RV32 systems, the `sbiret.value` will only contain
-the lower 32 bits of the CPPC register value.
+value in `sbiret.value`. When supervisor mode XLEN is 32, the `sbiret.value`
+will only contain the lower 32 bits of the CPPC register value.
 
 The possible error codes returned in `sbiret.error` are shown in
 <<table_cppc_read_errors>>.
@@ -2119,7 +2119,7 @@ The possible error codes returned in `sbiret.error` are shown in
                             unknown other reasons.
 |===
 
-=== Function: Read CPPC register high bits(FID #2)
+=== Function: Read CPPC register high bits (FID #2)
 
 [source, C]
 ----
@@ -2127,7 +2127,7 @@ struct sbiret sbi_cppc_read_hi(uint32_t cppc_reg_id)
 ----
 Reads the upper 32-bit value of the register specified in the `cppc_reg_id`
 parameter and returns the value in `sbiret.value`. This function always
-returns zero in `sbiret.value` for RV64 (or higher) systems.
+returns zero in `sbiret.value` when supervisor mode XLEN is 64 or higher.
 
 The possible error codes returned in `sbiret.error` are shown in
 <<table_cppc_read_hi_errors>>.
